--- a/index.html
+++ b/index.html
@@ -179,7 +179,10 @@
             <div class="eight columns">
                 <h2 class="bio">About Rohit Kaushik</h2>
                 <p class="bio">
-                    Hi there! I am currently a 4th-year Game Design & Development student studying at the Rochester Institute of Technology. I am very passionate not only about game development, but also in developing an engaging narrative for games. In addition, I enjoy programming, and have experience in developing with many industry standard languages, such as C/C++, C#, Python, etc. If you are more interested in guaging my skill set, you can find my resume <a class="resume" href="RKResume.pdf">here</a>.
+                    Hi there! I am currently a 5th-year Game Design & Development student studying at the Rochester Institute of Technology. 
+                    I am very passionate not only about game development, but also in developing an engaging narrative for games. 
+                    In addition, I enjoy programming, and have experience in developing with many industry standard languages, such as C/C++, C#, Python, etc. 
+                    If you are more interested in gaguing my skill set, you can find my resume <a class="resume" href="RKResume.pdf">here</a>.
                 </p>
             </div>
         </div>
@@ -194,8 +197,7 @@
                 <h2 class="bio">Contact Me</h2>
                 <p class="bio">
                     <ul class="contact">You can contact me through the following means:
-                        <li>Mobile: 310-795-0705</li>
-                        <li>Email: rohitgkaushik@gmail.com</li>
+                        <li>Email: rohitgkaushik [at] gmail.com</li>
                         <li>Based in: Pasadena, CA</li>
                     </ul>
                 </p>
@@ -219,7 +221,7 @@
                 <p class="documentation">This website was made using Skeleton 2.0.4, FancyBox3, Font Awesome 4.7.0, and jQuery 3.2.1.</p>
             </div>
             <div class="row twelve columns">
-                <p class="copyright">&copy; 2019 Rohit Kaushik. All Rights Reserved.</p>
+                <p class="copyright">&copy; 2020 Rohit Kaushik. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
