Updated Personal Profile

--- a/index.html
+++ b/index.html
@@ -238,14 +238,15 @@
                 <div class="eight columns">
                     <h2 class="bio">About Rohit Kaushik</h2>
                     <p class="bio">
-                        Hi there! I am currently a 5th-year Game Design & Development student studying at the Rochester
-                        Institute of Technology.
-                        I am very passionate not only about game development, but also in developing an engaging
-                        narrative for games.
-                        In addition, I enjoy programming, and have experience in developing with many industry standard
+                        Hi there! I am a recent graduate from Rochester
+                        Institute of Technology, having recieved a Bachelors of Science in Game Design & Development and
+						a minor in Creative Writing.
+                        I am very passionate about game design. I strive to create fun and lasting experiences for players
+						and hope to inspire people through my games. 
+                        I enjoy programming, and have experience in developing with many industry standard
                         languages, such as C/C++, C#, Python, etc.
-                        If you are more interested in gauging my skill set, you can find my resume <a class="resume"
-                            href="RKResume.pdf">here</a>.
+                        If you are interested in hiring me, please feel free to reach out! You can find my resume <a class="resume"
+                        href="RKResume.pdf">here</a>.
                     </p>
                 </div>
             </div>
